argocd/fe-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-app
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: "/"
spec:
  selector:
    app: frontend-app
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
