argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
  labels:
    app.kubernetes.io/instance: enrolment-svc
    env: dev
  name: fe
  namespace: enrolment-fe
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - backend:
              service:
                name: enrolment-react-svc
                port:
                  number: 80
            path: /
            pathType: Prefix
